--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "heroicons": "^2.0.18",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "sequelize": "^6.35.1",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "tailwindcss": "^3"
   }
 }
